Step 16: Dialogs and Fragments

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -7,3 +7,4 @@ showHelloButtonText=Say Hello
 helloMsg=Hello {0}
 homePageTitle=This is the page title
 helloPanelTitle=This ist the panel title
+openDialogButtonText=Say Hello With Dialog
