--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -8,3 +8,4 @@ helloMsg=Hello {0}
 homePageTitle=This is the page title
 helloPanelTitle=This ist the panel title
 openDialogButtonText=Say Hello With Dialog
+dialogCloseButtonText=Ok
