Step 19: Aggregation Binding - Add view with sample data

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,6 @@ homePageTitle=This is the page title
 helloPanelTitle=This ist the panel title
 openDialogButtonText=Say Hello With Dialog
 dialogCloseButtonText=Ok
+
+# Invoice List
+invoiceListTitle=Invoices
